styling base light styles with complex css selectors

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
+        <div class="lights__circle"></div>
+        <div class="lights__circle"></div>
       </div>
-      <img src="assets/christmastree.png" alt="" />
+      <img src="assets/christmastree.png" alt="image of a christmas tree" />
     </main>
   </body>
 </html>
