adding basic styles for christmas lights

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <main>
-      <div class="lights">
+      <div class="lights active">
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
@@ -27,7 +27,10 @@
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
       </div>
-      <img src="assets/christmastree.png" alt="image of a christmas tree" />
+      <div class="center">
+        <img src="assets/christmastree.png" alt="image of a christmas tree" />
+      </div>
+      <div class="toggle-night"></div>
     </main>
   </body>
 </html>
