adding dark toggle mode with jquery and clean code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
     <title>Christmas Lights - Vanilla JS</title>
   </head>
@@ -30,7 +34,10 @@
       <div class="center">
         <img src="assets/christmastree.png" alt="image of a christmas tree" />
       </div>
-      <div class="toggle-night"></div>
+      <div class="toggle-night">
+        <span class="material-icons">dark_mode </span>
+        Night
+      </div>
     </main>
   </body>
 </html>
