manually activate lights functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <main>
-      <div class="lights active">
+      <div class="lights">
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
@@ -38,6 +38,7 @@
         <span class="material-icons">dark_mode </span>
         Night
       </div>
+      <button class="toggle-lights">Turn On Lights</button>
     </main>
   </body>
 </html>
