added functionality to change speed

--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
         Night
       </div>
       <button class="toggle-lights">Turn On Lights</button>
+      <div class="change_speed">
+        <h1>Speed:</h1>
+        <input
+          value="0"
+          class="speed-control"
+          min="0"
+          max="5"
+          step="0.5"
+          type="number"
+        />
+      </div>
     </main>
   </body>
 </html>
