ability to change intensity

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
         <div class="lights__circle"></div>
+        <div class="lights__circle"></div>
+        <div class="lights__circle"></div>
       </div>
       <div class="center">
         <img src="assets/christmastree.png" alt="image of a christmas tree" />
@@ -47,6 +49,17 @@
           min="0"
           max="5"
           step="0.5"
+          type="number"
+        />
+      </div>
+      <div class="change__intensity">
+        <h1>Intensity:</h1>
+        <input
+          value="0"
+          class="speed-control"
+          min="0"
+          max="50"
+          step="1"
           type="number"
         />
       </div>
